# api/swagger.yml
@@ -767,6 +767,9 @@ definitions:
       genre:
         type: string
         example: Novel, Fantasy Fiction, Young adult literature
+      image_link:
+        type: string
+        example: http://books.google.com/books/content?id=u30YAAAAYAAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api
       pages:
         type: integer
         format: int32
@@ -806,6 +809,9 @@ definitions:
       google_book_ID:
         type: string
         example: P3LFEAAAQBAJ
+      image_link:
+        type: string
+        example: http://books.google.com/books/content?id=u30YAAAAYAAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api
       pages:
         type: integer
         format: int32
