# internal/api/handlers/books/get_top_rated_books.go
@@ -39,6 +39,7 @@ func (h *Handler) GetTopRatedBooks() echo.HandlerFunc {
 				Rating:          SafeInt32(book.Rating.Int),
 				Title:           &book.Title,
 				UserNotes:       book.UserNotes.String,
+				ImageLink:       book.ImageLink.String,
 			}
 			convertedBooks = append(convertedBooks, convertedBook)
 		}
