# internal/api/handlers/books/get_user_books.go
@@ -70,6 +70,7 @@ func (h *Handler) GetUserBooks() echo.HandlerFunc {
 				Rating:          SafeInt32(book.Rating.Int),
 				Title:           &book.Title,
 				UserNotes:       book.UserNotes.String,
+				ImageLink:       book.ImageLink.String,
 			}
 			convertedBooks = append(convertedBooks, convertedBook)
 		}
